--- a/tencentcloud_captcha/template/captchajs.htm
+++ b/tencentcloud_captcha/template/captchajs.htm
@@ -2,13 +2,13 @@
 var idhash = $('tencentcloudcaptcha').className;
 var dataAppId = '{$config[captchaAppId]}';
 var showHtml ='<input name="seccodehash" type="hidden" value="'+idhash+'" />
-<button type="button" name="codeVerifyButton" id="codeVerifyButton" data-appid="'+dataAppId+'" class="button">我不是人机</button>
-<input type="button" id="codePassButton" disabled="disabled" value="已通过验证" />
+<button type="button" name="codeVerifyButton" id="codeVerifyButton" data-appid="'+dataAppId+'" class="button">{lang tencentcloud_captcha:not_machine}</button>
+<input type="button" id="codePassButton" disabled="disabled" value="{lang tencentcloud_captcha:check_ok}" />
 <input type="hidden" id="codeVerifyTicket" name="codeVerifyTicket" value=""/>
 <input type="hidden" id="codeVerifyRandstr" name="codeVerifyRandstr" value=""/>';
 var sectpl = seccheck_tpl[idhash] != '' ? seccheck_tpl[idhash].replace(/<hash>/g, 'code' + idhash).replace(/_menu/g, '_hidden') : '';
     var sectplcode = sectpl != '' ? sectpl.split('<sec>') : Array('<br />', ': ', '<br />', '');
-        var string = sectplcode[0] +'人机验证'+ sectplcode[1] + showHtml + sectplcode[2] + sectplcode[3];
+        var string = sectplcode[0] +'{lang tencentcloud_captcha:machine_check}'+ sectplcode[1] + showHtml + sectplcode[2] + sectplcode[3];
         var showid = 'seccode_' + idhash;
         $(showid).innerHTML = string;
         $('codePassButton').setAttribute("style","display:none");
